# HelloJADE-desktop

./: .gitignore  AD_CONFIGURATION.md  ASTERISK_SETUP.md  BADGES.md  CHANGELOG.md  CONFIGURATION.md  FINALISATION-PROJET.md  GUIDE-GITHUB.md  GUIDE-INSTALLATION-RUST.md  GUIDE-TAURI.md  GUIDE_MODIFICATION_PATIENTS.md  HELLOJADE-URLS.txt  INSTALL-RUST.md  INSTALLATION-COMPLETE.md  LICENSE  ORACLE_HOSPITAL_SETUP.md  OUVRIR-HELLOJADE.md  PROJET-FINALISE.md  PROJET_STATUS.md  README.md  README_JADE_CALLS.md  REFONTE_COMPLETE.md  RESUME-FINAL-COMPLET.md  RESUME-FINAL.md  RESUME-INSTALLATION.md  SOLUTION-FINALE-RUST.md  SOLUTION-FINALE.md  check-db-structure.js  config.example.yml  config.yml  create-github-repo.ps1  create_satisfaction_tables.sql  docker-compose-simple.yml  docker-compose.yml  env.example  env.production  hellojade DDL  install-rust-manual.ps1  launch-hellojade.ps1  launch-tauri-dev.ps1  (+17 more)
ai/: download-models.py
backend/: Dockerfile  README.md  add-more-alerts.js  app.py  check-patients-inconsistencies.js  check-real-data.js  check_calls_structure.js  check_database_state.js  check_hospitalisations.js  check_scores_structure.js  check_tables_structure.js  clean_hellojade_tables.js  clean_test_data.js  config.env  config.env.example  create-satisfaction-tables.js  create-score-tables.js  create_calls_table.sql  create_calls_tables.sql  create_missing_tables.js  create_project_schema.sql  create_project_tables.sql  create_project_tables_simple.sql  database-enhanced.js  database-simple.js  database-sync.js  (+47 more)
frontend/src-tauri/: Cargo.toml  tauri.conf.json
(+183 files in other folders)
